<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/LinearPaddingBottom"
    android:paddingStart="@dimen/LinearPaddingLeft"
    android:paddingLeft="@dimen/LinearPaddingLeft"
    android:paddingRight="@dimen/LinearPaddingRight"
    android:paddingEnd="@dimen/LinearPaddingRight"
    android:paddingTop="50dp"
    android:orientation="vertical"
    tools:context=".MainActivity">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginRight="55dp"
            android:layout_marginEnd="55dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_e_call"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="65dp"
            android:layout_marginStart="65dp"
            android:text="@string/e_call"
            android:textSize="40sp"
            android:textColor="@color/colorBlack"/>
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp">
        <TableRow>
            <Button
                android:id="@+id/btn_polisi"
                style="@style/ButtonGeneral"
                android:drawableTop="@drawable/lambang_polri2"
                android:text="@string/polisi" />
            <Button
                android:id="@+id/btn_rumahsakit"
                style="@style/ButtonGeneral"
                android:drawableTop="@drawable/lambang_rs2"
                android:text="@string/rumah_sakit" />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/btn_damkar"
                style="@style/ButtonGeneral"
                android:drawableTop="@drawable/lambang_damkar2"
                android:text="@string/pemadam_kebakaran" />
            <Button
                android:id="@+id/btn_lain"
                style="@style/ButtonGeneral"
                android:drawableTop="@drawable/more2"
                android:text="@string/nomor_lain" />
        </TableRow>

    </TableLayout>

</LinearLayout>